--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,7 @@
       <img class="gallery-item" src="/images/gallery1.jpg" />
       <img class="gallery-item" src="/images/gallery2.jpg" />
       <img class="gallery-item" src="/images/gallery3.jpg" />
+      <img class="gallery-item" src="/images/gallery3.jpg" />
     </div>
   </content>
   <footer></footer>
