--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -73,11 +73,21 @@
   .gallery {
     display: grid;
 
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(3, 1fr);
 
+    justify-items: center;
+    align-items: center;
+
+    padding: 32px;
+
+    
     .gallery-item {
-      width: 20%;
+      border-radius: 12px;
+      width: 80%;
+      height: 80%;
+
+      object-fit: cover;
     }
   }
 }
