move images out of image folder

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@
     height: 300px;
     width: 100%;
     
-    background-image: url("/images/welder.jpeg");
+    background-image: url("/welder.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
