--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,10 +21,10 @@
     </div>
 
     <div class="gallery">
-      <img class="gallery-item" src="/images/gallery1.jpg" />
-      <img class="gallery-item" src="/images/gallery2.jpg" />
-      <img class="gallery-item" src="/images/gallery3.jpg" />
-      <img class="gallery-item" src="/images/gallery3.jpg" />
+      <img class="gallery-item" src="/gallery1.jpg" />
+      <img class="gallery-item" src="/gallery2.jpg" />
+      <img class="gallery-item" src="/gallery3.jpg" />
+      <img class="gallery-item" src="/gallery3.jpg" />
     </div>
   </content>
   <footer></footer>
