update styling and add logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app">
   <header class="nav">
-    <h2 class="nav-logo">Logo</h2>
+    <img class="logo" src="images/logo.svg">
     <div class="nav-items">
       <a>Home</a>
       <a>Gallery</a>
@@ -10,14 +10,16 @@
   </header>
   <content class="content">
     <div class="splash-image">
-      <h1 class="splash-title">Change How You Build</h1>
+      <h1>One shop stop welding Neebs</h1>
     </div>
 
     <div class="about">
-      <h1 class="about-title">A One Man Army</h1>
+      <h2 class="splash-title">KW Weld is your first stop for repairs of all your metal items, and manufacturing of small parts. </h2>
       <p class="about-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus enim massa, tristique id maximus sit amet, tristique consequat diam. Vivamus luctus posuere diam, nec finibus nisl facilisis et. Cras bibendum sem tortor, eu fringilla nisl malesuada non. Maecenas ornare nunc diam, sit amet suscipit elit porta et. Nulla nisi felis, euismod vel egestas sed, porttitor vitae tortor. Sed vitae interdum est. Ut massa mi, mollis ac leo a, euismod vehicula augue. Morbi laoreet auctor urna. Donec consequat sapien a dapibus lobortis.
+        KW Weld is your first stop for repairs of all your metal items, and manufacturing of small parts.
       </p>
+      <p>
+        Specializing in small projects and giving broken parts a second life; With a Welding Engineering Technology degree from SAIT, you can be sure that you are getting the right weld done right.      </p>
     </div>
 
     <div class="gallery">
