--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,12 @@
 .app {
   display: grid;
   grid-template-rows: auto 1fr auto;
-  
+
   min-height: 100vh;
+
+  padding: 0px 15%;
+
+  background-color: #111108;
 }
 
 .nav {
@@ -11,23 +15,29 @@
 
   align-items: center;
 
-  padding: 16px;
+  padding: 0 16px;
 
   background-color: white;
 
+  .logo {
+    height: 64px;
+  }
+
   .nav-items {
     justify-self: center;
-  
+
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-  
+
     justify-items: center;
-  
+
+    padding: 16px;
+
     a {
       padding: 0 32px;
-      border-right: 3px dotted black;
+      border-right: 3px solid rgb(0, 0, 0);
     }
-  
+
     a:last-child {
       border: none;
     }
@@ -36,23 +46,25 @@
 
 .content {
   .splash-image {
-    height: 300px;
     width: 100%;
-    
-    background-image: url("/kwweld/images/welder.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    
-    background-blend-mode: darken;    
-    background-color: rgba(0,0,0,0.5);
+
+    margin: 12px 0;
+
+    // background-image: url("/images/welder.jpeg");
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-position: center;
+
+
+    background-blend-mode: darken;
+    background-color: #d3bc5f;
 
     display: flex;
 
     justify-content: center;
     align-items: center;
 
-    color: white;
+    color: Black;
     font-size: 36px;
   }
 
@@ -74,14 +86,13 @@
     display: grid;
 
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
 
     justify-items: center;
     align-items: center;
 
     padding: 32px;
 
-    
+
     .gallery-item {
       border-radius: 12px;
       width: 80%;
