--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,15 @@
   <header class="nav">
     <img class="logo" src="images/logo.svg">
     <div class="nav-items">
-      <a>Home</a>
+      <!-- <a>Home</a>
       <a>Gallery</a>
       <a>Services</a>
-      <a>Contact</a>
+      <a>Contact</a> -->
     </div>
   </header>
   <content class="content">
     <div class="splash-image">
-      <h1>One shop stop welding Neebs</h1>
+      <h1>Small Parts Welding</h1>
     </div>
 
     <div class="about">
@@ -22,12 +22,17 @@
         Specializing in small projects and giving broken parts a second life; With a Welding Engineering Technology degree from SAIT, you can be sure that you are getting the right weld done right.      </p>
     </div>
 
-    <div class="gallery">
+    <div class="contact">
+      <p>Phone: (587)-917-4000</p>
+      <p>Email: kurt&#64;kwweld.ca</p>
+    </div>
+
+    <!-- <div class="gallery">
       <img class="gallery-item" src="/images/gallery1.jpg" />
       <img class="gallery-item" src="/images/gallery2.jpg" />
       <img class="gallery-item" src="/images/gallery3.jpg" />
       <img class="gallery-item" src="/images/gallery3.jpg" />
-    </div>
+    </div> -->
   </content>
   <footer></footer>
 </div>
