--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
 
   padding: 0 16px;
 
-  background-color: white;
+  background-color: #e5e5e5;
 
   .logo {
     height: 64px;
@@ -50,12 +50,6 @@
 
     margin: 12px 0;
 
-    // background-image: url("/images/welder.jpeg");
-    // background-repeat: no-repeat;
-    // background-size: cover;
-    // background-position: center;
-
-
     background-blend-mode: darken;
     background-color: #d3bc5f;
 
@@ -63,6 +57,8 @@
 
     justify-content: center;
     align-items: center;
+
+    text-align: center;
 
     color: Black;
     font-size: 36px;
@@ -100,5 +96,45 @@
 
       object-fit: cover;
     }
+  }
+
+  .contact {
+    background-color: #e5e5e5;
+
+    margin-top: 12px;
+
+    padding: 32px;
+
+    display: flex;
+
+    flex-direction: column;
+
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 1248px) {
+  .app {
+    padding: 0px;
+  }
+
+  .content {
+    .splash-image {
+      font-size: 24px;
+    }
+
+    .about {
+      padding: 0 10%;
+
+      h2 {
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .content .splash-image {
+    font-size: 16px;
   }
 }
